--- a/Learning_Google_Colab.ipynb
+++ b/Learning_Google_Colab.ipynb
@@ -35,7 +35,7 @@
         "outputId": "1f306221-b89f-450b-f181-d7c52dd3225f"
       },
       "id": "Lxykoa-N9af0",
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -48,11 +48,277 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "print(\"Hello Anupam\");print(\"You are a Great,\");print(\"Coder\")"
+      ],
       "metadata": {
-        "id": "_Owmrxya-IM3"
+        "id": "_Owmrxya-IM3",
+        "outputId": "b60b7143-c5fe-4fc1-c85d-0ceffcb119de",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "id": "_Owmrxya-IM3",
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hello Anupam\n",
+            "You are a Great,\n",
+            "Coder\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# using end=\"\" parameter\n",
+        "# we add a space after end=\" \" for better readability.\n",
+        "\n",
+        "print(\"Hello Anupam\",end=\"\");print(\":-Human and a Bright Student\")"
+      ],
+      "metadata": {
+        "id": "KPl_UR8ItM-e",
+        "outputId": "612a6cd4-3807-4b9e-9fe9-2c5e2b753db0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "KPl_UR8ItM-e",
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hello Anupam:-Human and a Bright Student\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"I am \",20,\"Years old Now\")"
+      ],
+      "metadata": {
+        "id": "wZupopbktplV",
+        "outputId": "c9b1a1de-4836-49e8-a830-04377b809903",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "wZupopbktplV",
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "I am  20 Years old Now\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Variables in Python\n",
+        "x = 5\n",
+        "y = \"John\"\n",
+        "print(x)\n",
+        "print(y)\n",
+        "\n",
+        "# printing the Type of Variable\n",
+        "x = 5\n",
+        "y = \"John\"\n",
+        "print(type(x))\n",
+        "print(type(y))"
+      ],
+      "metadata": {
+        "id": "jyJ3q6RHuLZI",
+        "outputId": "70187b81-0b8e-4c46-fe1e-366bf118f299",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "jyJ3q6RHuLZI",
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "5\n",
+            "John\n",
+            "<class 'int'>\n",
+            "<class 'str'>\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Many Values to Multiple Variables\n",
+        "x, y, z = \"Orange\", \"Banana\", \"Cherry\"\n",
+        "print(x)\n",
+        "print(y)\n",
+        "print(z)"
+      ],
+      "metadata": {
+        "id": "obHc7Y9nugwg",
+        "outputId": "99351c10-1d47-4607-9133-f12a2835f78e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "obHc7Y9nugwg",
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Orange\n",
+            "Banana\n",
+            "Cherry\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x=y=z=\"Anupam\"\n",
+        "print(x)\n",
+        "print(z)"
+      ],
+      "metadata": {
+        "id": "aJGU_y6lwEWb",
+        "outputId": "d214865a-c1fb-46f3-8919-b74711829255",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "aJGU_y6lwEWb",
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Anupam\n",
+            "Anupam\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "friends=[\"Alex\",\"Sopia\",\"Steve\"]\n",
+        "x,y,z=friends\n",
+        "print(x,end=\" and \");print(y,\"are Lovers whereas \"),print(z,\"is Steve\")"
+      ],
+      "metadata": {
+        "id": "jJIxTUrwwRBY",
+        "outputId": "ec364d22-c12f-4012-8676-fa1f82d38861",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "jJIxTUrwwRBY",
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Alex and Sopia are Lovers whereas \n",
+            "Steve is Steve\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(None, None)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 23
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x=\"Anupam\"\n",
+        "y=\"is in\"\n",
+        "z=\"Learning Phase\"\n",
+        "print(x,y,z)\n",
+        "print(x+y+z)\n",
+        "print(x.upper())"
+      ],
+      "metadata": {
+        "id": "BNOzl25pwrvY",
+        "outputId": "3469c181-7fa4-4027-921d-0c83773e1a9e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "BNOzl25pwrvY",
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Anupam is in Learning Phase\n",
+            "Anupamis inLearning Phase\n",
+            "ANUPAM\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x=float(2.8)\n",
+        "print(x)\n",
+        "print(type(x))"
+      ],
+      "metadata": {
+        "id": "JTQYdbuux11k",
+        "outputId": "0147b240-6c90-436b-d5cb-49029a582c93",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "JTQYdbuux11k",
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2.8\n",
+            "<class 'float'>\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "iiNQOjBZyk92"
+      },
+      "id": "iiNQOjBZyk92",
       "execution_count": null,
       "outputs": []
     }
