--- a/Learning_Google_Colab.ipynb
+++ b/Learning_Google_Colab.ipynb
@@ -53,10 +53,10 @@
       ],
       "metadata": {
         "id": "_Owmrxya-IM3",
-        "outputId": "b60b7143-c5fe-4fc1-c85d-0ceffcb119de",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "b60b7143-c5fe-4fc1-c85d-0ceffcb119de"
       },
       "id": "_Owmrxya-IM3",
       "execution_count": 2,
@@ -81,11 +81,11 @@
         "print(\"Hello Anupam\",end=\"\");print(\":-Human and a Bright Student\")"
       ],
       "metadata": {
-        "id": "KPl_UR8ItM-e",
-        "outputId": "612a6cd4-3807-4b9e-9fe9-2c5e2b753db0",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "KPl_UR8ItM-e",
+        "outputId": "612a6cd4-3807-4b9e-9fe9-2c5e2b753db0"
       },
       "id": "KPl_UR8ItM-e",
       "execution_count": 7,
@@ -105,11 +105,11 @@
         "print(\"I am \",20,\"Years old Now\")"
       ],
       "metadata": {
-        "id": "wZupopbktplV",
-        "outputId": "c9b1a1de-4836-49e8-a830-04377b809903",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "wZupopbktplV",
+        "outputId": "c9b1a1de-4836-49e8-a830-04377b809903"
       },
       "id": "wZupopbktplV",
       "execution_count": 9,
@@ -139,11 +139,11 @@
         "print(type(y))"
       ],
       "metadata": {
-        "id": "jyJ3q6RHuLZI",
-        "outputId": "70187b81-0b8e-4c46-fe1e-366bf118f299",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "jyJ3q6RHuLZI",
+        "outputId": "70187b81-0b8e-4c46-fe1e-366bf118f299"
       },
       "id": "jyJ3q6RHuLZI",
       "execution_count": 11,
@@ -170,11 +170,11 @@
         "print(z)"
       ],
       "metadata": {
-        "id": "obHc7Y9nugwg",
-        "outputId": "99351c10-1d47-4607-9133-f12a2835f78e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "obHc7Y9nugwg",
+        "outputId": "99351c10-1d47-4607-9133-f12a2835f78e"
       },
       "id": "obHc7Y9nugwg",
       "execution_count": 12,
@@ -198,11 +198,11 @@
         "print(z)"
       ],
       "metadata": {
-        "id": "aJGU_y6lwEWb",
-        "outputId": "d214865a-c1fb-46f3-8919-b74711829255",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "aJGU_y6lwEWb",
+        "outputId": "d214865a-c1fb-46f3-8919-b74711829255"
       },
       "id": "aJGU_y6lwEWb",
       "execution_count": 17,
@@ -225,11 +225,11 @@
         "print(x,end=\" and \");print(y,\"are Lovers whereas \"),print(z,\"is Steve\")"
       ],
       "metadata": {
-        "id": "jJIxTUrwwRBY",
-        "outputId": "ec364d22-c12f-4012-8676-fa1f82d38861",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "jJIxTUrwwRBY",
+        "outputId": "ec364d22-c12f-4012-8676-fa1f82d38861"
       },
       "id": "jJIxTUrwwRBY",
       "execution_count": 23,
@@ -265,11 +265,11 @@
         "print(x.upper())"
       ],
       "metadata": {
-        "id": "BNOzl25pwrvY",
-        "outputId": "3469c181-7fa4-4027-921d-0c83773e1a9e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "BNOzl25pwrvY",
+        "outputId": "3469c181-7fa4-4027-921d-0c83773e1a9e"
       },
       "id": "BNOzl25pwrvY",
       "execution_count": 29,
@@ -293,11 +293,11 @@
         "print(type(x))"
       ],
       "metadata": {
-        "id": "JTQYdbuux11k",
-        "outputId": "0147b240-6c90-436b-d5cb-49029a582c93",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "JTQYdbuux11k",
+        "outputId": "0147b240-6c90-436b-d5cb-49029a582c93"
       },
       "id": "JTQYdbuux11k",
       "execution_count": 28,
@@ -314,11 +314,37 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# Getting the random value\n",
+        "import random\n",
+        "print(random.randrange(1, 10))"
+      ],
       "metadata": {
-        "id": "iiNQOjBZyk92"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "iiNQOjBZyk92",
+        "outputId": "a631584f-8567-40b6-945b-906af708adf9"
       },
       "id": "iiNQOjBZyk92",
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "8\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "q6bnMiaZNVvt"
+      },
+      "id": "q6bnMiaZNVvt",
       "execution_count": null,
       "outputs": []
     }
